--- a/styles2.css
+++ b/styles2.css
@@ -7,14 +7,17 @@ grid-template-columns: 20% auto;
 #top-banner {
 grid-rows: 1/2;
 grid-columns: 1/3;
+background-color: red;
 }
 
 #left-sidebar {
 grid-rows: 1/3;
 grid-columns: 1/2;
+background-color: blue;
 }
 
 #display-box {
 grid-rows: 2/3;
 grid-columns: 2/3;
+background-color: red;
 }
