--- a/gamestyles.css
+++ b/gamestyles.css
@@ -1,3 +1,17 @@
 body {
 font-family: Noto Mono;
+display: grid;
+grid-template-rows: 200 auto;
+grid-template-columns: 200 200 auto;
+grid-gap: 20;
+}
+
+#game-box {
+grid-row: 1/2;
+grid-column:1/2;
+}
+
+#data-box {
+grid-row: 1/2;
+grid-column: 2/3;
 }
