--- a/styles2.css
+++ b/styles2.css
@@ -24,52 +24,74 @@ font-display: swap;
 }
 
 body {
-display: grid;
 margin: 0;
 padding: 0;
-grid-template-rows: 15% 33% 52%;
-grid-template-columns: 18% 30% 52%;
 }
 
 #top-banner {
 background-color: rgb(255, 104, 104);
-grid-row: 1/2;
-grid-column: 1/4;
+height: 15%;
+width: 100%;
 display: grid;
 grid-template-rows: 50% 50%;
+justify-content: space-around;
+position: fixed;
+z-index: 1;
 }
 #top-banner-1 {
 font-family: 'TF2Build';
-font-size: 40px;
+font-size: 35px;
 color: white;
 grid-row: 1/2;
 display: flex;
 justify-content: center;
 }
 #top-banner-2 {
+font-family: 'TF2Build';
+font-size: 20px;
+color: white;
 grid-row:2/3;
 display: grid;
-grid-template-columns: 33% 33% 33%;
+grid-template-columns: 25% 25% 25% 25%;
 justify-content: space-evenly;
+grid-gap: 4px;
 padding: 7px;
 }
 #top-banner-2-1{
 grid-column: 1/2;
-background-color:Crimson;
+background-color: Tomato;
 border: 3px solid white;
 border-radius: 5px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 #top-banner-2-2{
 grid-column: 2/3;
-background-color: FireBrick;
+background-color: Crimson;
 border: 3px solid white;
 border-radius: 5px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 #top-banner-2-3{
 grid-column: 3/4;
+background-color: FireBrick;
+border: 3px solid white;
+border-radius: 5px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+#top-banner-2-4{
+grid-column: 4/5;
 background-color: Maroon;
 border: 3px solid white;
 border-radius: 5px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 #left-banner {
@@ -77,28 +99,36 @@ background-color: rgb(113,175,255);
 font-family: 'TF2Professor';
 color: White;
 font-size: 30px;
-grid-row: 2/4;
-grid-column: 1/2;
-padding: 5px;
+position: fixed;
+top: 15%;
+height: 85%;
+width: 14%;
+margin: 5 px;
+z-index: 1;
 }
 
 #text-box {
 font-family: 'TF2Secondary';
 font-size: 20px;
-grid-row: 2/4;
-grid-column: 2/4;
-display: grid;
-grid-template-rows: 95% 5%;
-}
-
-#text {
-grid-row: 1/2;
+height: 500%;
+width: 85%;
+left: 15%;
+top: 15%;
+position: relative;
+z-index: 0;
 }
 
 #bottom-banner{
 background-color: rgb(255,228,151);
 font-family: 'TF2Build';
-grid-row: 2/3;
+height: 1%;
+width: 85.26%;
+bottom: 0;
+right: 0;
+position: fixed;
+padding: 5px;
 display: flex;
 justify-content: center;
+align-items: center;
+z-index: 1;
 }
