--- a/bitcoinsafe.css
+++ b/bitcoinsafe.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 10px;
+  background-color: #282c34;
 }
 
 .App {
@@ -13,6 +14,11 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+input[type="radio"] {
+  size: 30px;
+  cursor: pointer;
 }
 
 .second-page {
@@ -37,16 +43,19 @@ body {
   text-overflow: ellipsis;
   justify-content: center;
   align-items: center;
-  word-wrap: wrap;
   margin: 1px;
   font-size: 12px;
   color: black;
   background-color: white;
 }
 
+.cell:hover {
+  background-color: rgb(200, 200, 200);
+}
+
 .name {
-  font-size: 12px;
-  width: 10vw;
+  font-size: 16px;
+  width: 16vw;
 }
 
 .url {
@@ -56,7 +65,7 @@ body {
 
 .completeinstructions {
   font-size: 20px;
-  width: 4vw;
+  width: 5vw;
 }
 
 .setupspeed {
@@ -76,12 +85,12 @@ body {
 
 .theftprevention {
   font-size: 20px;
-  width: 4vw;
+  width: 5vw;
 }
 
 .lossprevention {
   font-size: 20px;
-  width: 4vw;
+  width: 5vw;
 }
 
 .safesetup {
@@ -91,7 +100,7 @@ body {
 
 .inheritancesafety {
   font-size: 20px;
-  width: 4vw;
+  width: 5vw;
 }
 
 .comments {
@@ -100,7 +109,7 @@ body {
 }
 
 .legend {
-  font-size: 10px;
-  height: 2vw;
+  font-size: 12px;
+  height: 5vh;
   align-self: flex-end;
 }
