--- a/bitcoinsafelight.css
+++ b/bitcoinsafelight.css
@@ -10,7 +10,7 @@ body {
 .App {
   text-align: center;
   background-color: rgb(255, 255, 255);
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,7 +39,7 @@ button:disabled {
 }
 
 #theme {
-  position: fixed;
+  position: absolute;
   top: 10px;
   right: 10px;
 }
@@ -80,6 +80,12 @@ button:disabled {
   font-size: calc(10px + 2vmin);
   color: white;
   margin: 0;
+}
+
+#return {
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .matrix {
