--- a/bitcoinsafe/bitcoinsafedark.css
+++ b/bitcoinsafe/bitcoinsafedark.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(30, 30, 30);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -9,14 +9,14 @@ body {
 
 .App {
   text-align: center;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(30, 30, 30);
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: black;
+  color: white;
 }
 
 button {
@@ -88,6 +88,36 @@ button:disabled {
   left: 10px;
 }
 
+.profiles {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid rgb(0, 123, 255);
+  border-radius: 15px;
+  padding: 1px;
+  margin: 3px;
+  background-color: rgb(0, 123, 255);
+}
+
+.profile {
+  background-color: rgb(30, 30, 30);
+  border-radius: 10px;
+  padding: 3px;
+  margin: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-picture {
+  height: 50px;
+  width: 50px;
+  border: 2px solid rgb(0, 123, 255);
+  border-radius: 25px;
+}
+
 .matrix {
   background-color: rgb(0, 123, 255);
   padding: 3px;
@@ -109,8 +139,8 @@ button:disabled {
   align-items: center;
   margin: 1px;
   font-size: 12px;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: rgb(30, 30, 30);
 }
 
 .cell:hover {
