--- a/bitcoinsafe/bitcoinsafelight.css
+++ b/bitcoinsafe/bitcoinsafelight.css
@@ -27,10 +27,9 @@ body {
   color: black;
 }
 
-.title {
+#title {
   font-size: 40px;
   font-family: Ubuntu-BoldItalic;
-  text-shadow: 2px 2px 2px #a0a0a0;
 }
 
 button {
