added comments and fixed stuff

--- a/bitcoinsafe/bitcoinsafedark.css
+++ b/bitcoinsafe/bitcoinsafedark.css
@@ -34,7 +34,7 @@ body {
 
 button {
   background-color: rgb(0, 123, 255);
-  color: white;
+  color: black;
   font-size: calc(10px + 2vmin);
   border: 0px solid rgb(0, 123, 255);
   border-radius: 10px;
@@ -49,6 +49,33 @@ button:hover {
 
 button:disabled {
   background-color: rgb(155, 155, 255);
+}
+
+.control-panel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid rgb(0, 123, 255);
+  border-radius: 10px;
+  padding: 1px;
+  margin: 3px;
+  background-color: rgb(0, 123, 255);
+}
+
+.control {
+  background-color: rgb(30, 30, 30);
+  color: white;
+  font-size: 12px;
+  border: 0px solid rgb(30, 30, 30);
+  border-radius: 10px;
+  cursor: pointer;
+  outline: none;
+}
+
+.control:hover {
+  background-color: rgb(155, 155, 255);
+  transition-duration: 0.1s;
 }
 
 #theme {
@@ -115,6 +142,8 @@ button:disabled {
 
 .profile {
   background-color: rgb(30, 30, 30);
+  color: white;
+  font-size: 12px;
   border-radius: 10px;
   padding: 3px;
   margin: 1px;
@@ -160,6 +189,27 @@ button:disabled {
   background-color: rgb(0, 100, 200);
   transition-duration: 0.3s;
   color: white;
+}
+
+.cell:active .comment {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(0, 100, 200);
+  transition-duration: 0.3s;
+  color: white;
+}
+
+.comment {
+  text-align: center;
+  display: none;
+  position: absolute;
+  word-wrap: wrap;
+  width: 150px;
+  padding: 2px;
+  font-size: 12px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border: 1px solid black;
 }
 
 .name {
@@ -212,19 +262,27 @@ button:disabled {
   width: 5vw;
 }
 
-.comments {
-  font-size: 12px;
-  width: 20vw;
-  word-wrap: wrap;
-}
-
 .spendspeed {
   font-size: 16px;
   width: 5vw;
+}
+
+.easytosetup {
+  font-size: 12px;
+  width: 20vw;
+  word-wrap: wrap;
 }
 
 .legend {
   font-size: 12px;
   height: 5vh;
   align-self: flex-end;
+}
+
+.bottom {
+  height: 4vw;
+  font-size: 40px;
+  font-family: Ubuntu-BoldItalic;
+  color: white;
+  margin: 5px;
 }
