--- a/bitcoinsafe/bitcoinsafelight.css
+++ b/bitcoinsafe/bitcoinsafelight.css
@@ -59,11 +59,22 @@ button:disabled {
   justify-content: space-evenly;
   align-items: center;
   border: 1px solid rgb(0, 123, 255);
+  height: 20px;
   border-radius: 10px;
-  padding: 1px;
+  padding: 3px;
   margin: 3px;
   background-color: rgb(0, 123, 255);
   box-shadow: 2px 2px 2px #a0a0a0;
+}
+
+.filters {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  padding: 2px;
+  color: white;
+  font-size: 16px;
 }
 
 .control {
@@ -74,6 +85,7 @@ button:disabled {
   border-radius: 10px;
   cursor: pointer;
   outline: none;
+  margin: 3px;
 }
 
 .control:hover {
@@ -89,29 +101,33 @@ button:disabled {
 
 .first-page {
   display: grid;
-  grid-template-rows: 80px 80px 80px;
+  grid-template-rows: 40px 80px 80px 80px;
   grid-template-columns: 240px 240px;
   grid-gap: 3px;
 }
-
-#privacy {
+#prompt {
   grid-row: 1/2;
+  grid-column: 1/3;
+  font-family: Ubuntu-BoldItalic;
+}
+#privacy {
+  grid-row: 2/3;
   grid-column: 1/2;
 }
 #setupspeed {
-  grid-row: 1/2;
+  grid-row: 2/3;
   grid-column: 2/3;
 }
 #security {
-  grid-row: 2/3;
+  grid-row: 3/4;
   grid-column: 1/2;
 }
 #spendingspeed {
-  grid-row: 2/3;
+  grid-row: 3/4;
   grid-column: 2/3;
 }
 #submit {
-  grid-row: 3/4;
+  grid-row: 4/5;
   grid-column: 1/3;
   cursor: pointer;
 }
@@ -134,7 +150,7 @@ button:disabled {
 .profiles {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
   border: 1px solid rgb(0, 123, 255);
   border-radius: 15px;
@@ -150,7 +166,7 @@ button:disabled {
   font-size: 12px;
   border-radius: 10px;
   padding: 3px;
-  margin: 1px;
+  margin: 3px;
   display: flex;
   flex-direction: column;
   justify-content: center;
