--- a/bitcoinsafe/bitcoinsafelight.css
+++ b/bitcoinsafe/bitcoinsafelight.css
@@ -93,6 +93,11 @@ button:disabled {
   transition-duration: 0.1s;
 }
 
+.control:active {
+  transform: translateY(1px);
+  transition-duration: 0s;
+}
+
 #theme {
   position: absolute;
   top: 10px;
@@ -103,7 +108,7 @@ button:disabled {
   display: grid;
   grid-template-rows: 40px 80px 80px 80px;
   grid-template-columns: 240px 240px;
-  grid-gap: 3px;
+  grid-gap: 4px;
 }
 #prompt {
   grid-row: 1/2;
@@ -186,7 +191,10 @@ button:disabled {
   background-color: rgb(0, 123, 255);
   padding: 3px;
   border: 3px solid rgb(0, 123, 255);
-  border-radius: 5px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
   box-shadow: 2px 2px 2px #a0a0a0;
 }
 
@@ -300,6 +308,16 @@ button:disabled {
   font-size: 12px;
   height: 5vh;
   align-self: flex-end;
+}
+
+.legend .name {
+  border: 0px solid white;
+  border-top-left-radius: 5px;
+}
+
+.legend .easytosetup {
+  border: 0px solid white;
+  border-top-right-radius: 5px;
 }
 
 .bottom {
