--- a/bitcoinsafe/bitcoinsafe.css
+++ b/bitcoinsafe/bitcoinsafe.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(246, 245, 250);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -10,20 +10,24 @@ body {
 @font-face {
   font-family: "Ubuntu-BoldItalic";
   src: url("Ubuntu-BoldItalic.woff") format("woff");
-  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
+#title {
+  color: #181059;
+  font-size: 48px;
+  font-family: Ubuntu-BoldItalic;
+  text-shadow: 1px 1px 2px #a0a0a0;
+}
 input[type="checkbox"] {
-  margin-left: 10px;
-  margin-right: 10px;
   position: relative;
-  width: 100px;
-  height: 40px;
-  background: #bdc3c7;
+  margin-right: 5px;
+  width: 80px;
+  height: 20px;
+  background: #181059;
   appearance: none;
-  border-radius: 20px;
+  border-radius: 10px;
   outline: none;
   transition: 0.4s;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, a);
@@ -33,9 +37,9 @@ input[type="checkbox"]::before {
   position: absolute;
   content: "";
   left: 0;
-  width: 40px;
-  height: 40px;
-  background: #fff;
+  width: 20px;
+  height: 20px;
+  background: rgb(237, 187, 1);
   border-radius: 50%;
   transform: scale(0.8);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -46,45 +50,79 @@ input:checked[type="checkbox"]::before {
 }
 label {
   font-size: 20px;
+  font-weight: 1000;
   pointer-events: none;
   font-family: Ubuntu-BoldItalic;
-}
-
-#title {
-  font-size: 36px;
-  font-family: Ubuntu-BoldItalic;
+  color: #181059;
+  margin-right: 10px;
   text-shadow: 1px 1px 2px #a0a0a0;
 }
-
-.profiles {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  border: 1px solid rgb(0, 123, 255);
-  border-radius: 15px;
-  padding: 1px;
-  margin: 3px;
-  background-color: rgb(0, 123, 255);
-  box-shadow: 2px 2px 2px #a0a0a0;
+#products {
+  background-color: rgb(246, 245, 250);
+}
+#product-1 {
+  background-color: white;
+  color: #181059;
+  box-shadow: 0px 0px 5px #a0a0a0;
+  transition-duration: 0.5s;
+}
+#product-1:hover {
+  transform: translate(0px, -20px);
+  box-shadow: 0px 0px 10px 3px #808080;
+}
+#product-2 {
+  background-color: white;
+  color: #181059;
+  box-shadow: 0px 0px 5px #a0a0a0;
+  transition-duration: 0.5s;
+}
+#product-2:hover {
+  transform: translate(0px, -20px);
+  box-shadow: 0px 0px 10px 3px #808080;
+}
+#product-3 {
+  background-color: #181059;
+  color: white;
+  box-shadow: 0px 0px 5px #a0a0a0;
+  transition-duration: 0.5s;
+}
+#product-3:hover {
+  transform: translate(0px, -20px);
+  box-shadow: 0px 0px 10px 3px #808080;
+}
+#product-4 {
+  background-color: white;
+  color: #181059;
+  box-shadow: 0px 0px 5px #a0a0a0;
+  transition-duration: 0.5s;
+}
+#product-4:hover {
+  transform: translate(0px, -20px);
+  box-shadow: 0px 0px 10px 3px #808080;
 }
 
 .profile {
-  background-color: white;
-  color: black;
-  font-size: 12px;
-  border-radius: 10px;
-  padding: 3px;
-  margin: 3px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  color: #181059;
+  font-size: 13px;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .profile-picture {
-  height: 50px;
-  width: 50px;
-  border: 2px solid rgb(0, 123, 255);
-  border-radius: 25px;
+  height: 180px;
+  width: 180px;
+  border: 1px solid #181059;
+  border-radius: 90px;
+  box-shadow: 2px 2px 5px #a0a0a0;
+  transition-duration: 0.5s;
+}
+
+.profile-picture:hover {
+  box-shadow: 0px 0px 10px 3px #808080;
+}
+
+#bottom {
+  background-color: rgb(246, 245, 250);
+  color: #181059;
 }
