--- a/bitcoinsafe/bitcoinsafe.css
+++ b/bitcoinsafe/bitcoinsafe.css
@@ -65,6 +65,7 @@ label {
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
+  line-height: 30px;
 }
 #product-1:hover {
   transform: translate(0px, -20px);
@@ -75,6 +76,7 @@ label {
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
+  line-height: 30px;
 }
 #product-2:hover {
   transform: translate(0px, -20px);
@@ -85,6 +87,7 @@ label {
   color: white;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
+  line-height: 30px;
 }
 #product-3:hover {
   transform: translate(0px, -20px);
@@ -95,6 +98,7 @@ label {
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
+  line-height: 30px;
 }
 #product-4:hover {
   transform: translate(0px, -20px);
