--- a/bitcoinsafe/bitcoinsafe.css
+++ b/bitcoinsafe/bitcoinsafe.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0px;
-  background-color: rgb(246, 245, 250);
+  background-color: #f6f5fa;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -14,20 +14,50 @@ body {
   font-display: swap;
 }
 
+@font-face {
+  font-family: Inter;
+  src: url("Inter-VariableFont_slnt\,wght.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+
 #title {
   color: #181059;
-  font-size: 48px;
-  font-family: Ubuntu-BoldItalic;
-  text-shadow: 1px 1px 2px #a0a0a0;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 39px;
+  /* identical to box height */
+  opacity: 0.96;
+  padding: 5px;
 }
+#description {
+  word-wrap: wrap;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  padding: 5px;
+
+  color: #181059;
+
+  opacity: 0.68;
+}
+
 input[type="checkbox"] {
   position: relative;
-  margin-right: 5px;
-  width: 80px;
-  height: 20px;
+  align-self: center;
+  justify-self: end;
+  top: 7px;
+  right: 6px;
+  width: 56px;
+  height: 24px;
   background: #181059;
   appearance: none;
-  border-radius: 10px;
+  border-radius: 62px;
   outline: none;
   transition: 0.4s;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, a);
@@ -36,36 +66,38 @@ input[type="checkbox"] {
 input[type="checkbox"]::before {
   position: absolute;
   content: "";
-  left: 0;
-  width: 20px;
-  height: 20px;
-  background: rgb(237, 187, 1);
+  left: 4px;
+  top: 4px;
+  width: 16px;
+  height: 16px;
+  background: #edbb01;
   border-radius: 50%;
-  transform: scale(0.8);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 input:checked[type="checkbox"]::before {
-  left: 60px;
+  left: 36px;
 }
 label {
-  font-size: 20px;
-  font-weight: 1000;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: normal;
   pointer-events: none;
-  font-family: Ubuntu-BoldItalic;
+  font-family: Inter;
   color: #181059;
+  opacity: 0.96;
   margin-right: 10px;
-  text-shadow: 1px 1px 2px #a0a0a0;
 }
 #products {
-  background-color: rgb(246, 245, 250);
+  background-color: #f6f5fa;
+  font-family: Inter;
 }
 #product-1 {
   background-color: white;
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
-  line-height: 30px;
+  line-height: 29px;
   cursor: pointer;
 }
 #product-1:hover {
@@ -77,7 +109,7 @@ label {
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
-  line-height: 30px;
+  line-height: 29px;
   cursor: pointer;
 }
 #product-2:hover {
@@ -89,7 +121,7 @@ label {
   color: white;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
-  line-height: 30px;
+  line-height: 29px;
   cursor: pointer;
 }
 #product-3:hover {
@@ -101,7 +133,7 @@ label {
   color: #181059;
   box-shadow: 0px 0px 5px #a0a0a0;
   transition-duration: 0.5s;
-  line-height: 30px;
+  line-height: 29px;
   cursor: pointer;
 }
 #product-4:hover {
@@ -112,6 +144,7 @@ label {
 .profile {
   color: #181059;
   font-size: 13px;
+  font-family: Inter;
   font-weight: 400;
   margin-left: 10px;
   margin-top: 10px;
@@ -132,6 +165,15 @@ label {
 }
 
 #bottom {
-  background-color: rgb(246, 245, 250);
+  background-color: #f6f5fa;
   color: #181059;
+  z-index: -1;
+}
+
+#vector {
+  position: fixed;
+  opacity: 0.5;
+  left: -5px;
+  top: -5px;
+  z-index: 0;
 }
