--- a/bitcoinsafe/bitcoinsafe.css
+++ b/bitcoinsafe/bitcoinsafe.css
@@ -142,17 +142,13 @@ label {
 
 .profile {
   color: #181059;
-  font-size: 13px;
   font-family: Inter;
-  font-weight: 400;
-  margin-left: 10px;
-  margin-top: 10px;
   cursor: pointer;
 }
 
 .profile-picture {
-  height: 10vw;
-  width: 10vw;
+  height: 140px;
+  width: 140px;
   border: 1px solid #181059;
   border-radius: 75px;
   box-shadow: 2px 2px 5px #a0a0a0;
@@ -170,7 +166,7 @@ label {
 
 #vector {
   position: fixed;
-  opacity: 0.5;
+  opacity: 0.15;
   left: -5px;
   top: -5px;
 }
